@@ -1,6 +1,7 @@
 package com.awesome.awesomenotes.note;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -52,7 +53,7 @@ public class NoteController {
                 .getByAuthorId(authorizedUser.getId())
                 .stream()
                 .map(note -> noteConverter.convert(note))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @GetMapping(path = "/{id}")
